--- a/config-client-test.properties
+++ b/config-client-test.properties
@@ -1,2 +1,6 @@
 test = test version 21
 democonfigclient.message=hello spring io
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
